--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.record-audio-button {
+/* .record-audio-button {
   position: relative;
   display: flex;
   align-items: center;
@@ -30,4 +30,4 @@
   100% {
     box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
   }
-}
+} */
